dataset1235/2025-2/805158916/users/1514794398/executions/2651470117_4233865845.log
== RUN (2025-08-25 14:43:49)
-- CODE: 
nmrl=float(input("Digite o grau Celsius"))

fa= nmrl*9/5+32

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite o grau Celsius
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite o grau Celsius
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite o grau Celsius
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite o grau Celsius
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite o grau Celsius
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite o grau Celsius
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:40:53)
-- CODE: 
fahrnheit = (celcius * 9/5)

print(round(fahrnheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fahrnheit = (celcius * 9/5)
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fahrnheit = (celcius * 9/5)
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fahrnheit = (celcius * 9/5)
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fahrnheit = (celcius * 9/5)
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fahrnheit = (celcius * 9/5)
                 ^^^^^^^
NameError: name 'celcius' is not defined
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fahrnheit = (celcius * 9/5)
                 ^^^^^^^
NameError: name 'celcius' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:47:25)
-- CODE: 
nmrl=float(input("Digite o grau Celsius"))

fa= nmrl*9/5+32

print(round(fa,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite o grau Celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite o grau Celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite o grau Celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite o grau Celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite o grau Celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite o grau Celsius86.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:47:19)
-- CODE: 
nmrl=float(input("Digite o grau Celsius"))

fa= nmrl*9/5+32

print(round(fa,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
-40.0
---- correct output:
-40.0
---- user output:
Digite o grau Celsius-40.0
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
14.0
---- user output:
Digite o grau Celsius14.0
-- TEST CASE 3:
---- input:
100.0
---- correct output:
212.0
---- user output:
Digite o grau Celsius212.0
-- TEST CASE 4:
---- input:
20.25
---- correct output:
68.45
---- user output:
Digite o grau Celsius68.45
-- TEST CASE 5:
---- input:
0.0
---- correct output:
32.0
---- user output:
Digite o grau Celsius32.0
-- TEST CASE 6:
---- input:
30.5
---- correct output:
86.9
---- user output:
Digite o grau Celsius86.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
